# atrace

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  RECORDING.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  test.yml
examples/: bin_2_dec.py  bin_2_dec_for.py  bin_2_dec_while.py  even_odd.py  fibonacci.py  fizzbuzz.py  function_call_in_loop.py  generator.py  kitchen_sink.py  nested_loops.py  reverse.py  small.py
inspiration/: devto_example.py  pyproject.toml  pytracetool_example.py
locale/: atrace.pot
locale/fr_FR/LC_MESSAGES/: atrace.mo  atrace.po
src/: complete_example.py  example.py  example_with_classes.py  small_example.py
src/atrace/: __init__.py  __main__.py  analyzer.py  animated.py  animated_compact.py  animated_histogram.py  code.py  code_with_trace.py  fixup.py  histogram.py  interpreter.py  model.py  outputlogger.py  report.py  reporter.py  tool_support.py  tracer.py  tracers.py  typst.py  vartracer.py
src/atrace/core/: analyzer.py  tracer.py
src/atrace/locale/: atrace.pot
src/atrace/locale/fr/LC_MESSAGES/: atrace.mo  atrace.po
src/atrace/tools/: code_with_trace.py  histogram.py  trace.py
src/examples/: complete_example.py  example_with_classes.py  function_example.py  pyproject.toml  small_example.py
src/inspiration/: execution_trace_example.py  pyproject.toml  pytracetool_example.py  simple_program.py  stack_overflow_example.py
tests/: NoTestReporter.py  TestFixup.py  TestReporter.py  TestTracing.py  TestTracingAbruptTermination.py  TestTracingSimple.py  TestTracingWithFunctions.py  __init__.py  test_abrupt_termination.py  test_functions.py  test_modes.py  test_report.py  test_reporter.py  test_sample.py  test_simple.py  test_tools.py
tests/programs/: assign_and_print.py  assign_none_unassign.py  assign_print_assign.py  caught_exception.py  complete_example.py  function.py  function_assign_before_call.py  function_lambda.py  function_nested.py  function_with_recursion.py  global_variable.py  histogram_example.py  import.py  input.py  kitchen_sink_example.py  loop_with_print.py  parallel_assignment.py  small.py  small_example.py  syntax_error.py  tight_loop.py  uncaught_exception.py
tests/snippets/: array_access.py  assign_none_unassign.py  caught_exception.py  empty.py  for_with_print.py  function.py  function_assign_before_call.py  function_generator.py  function_in_variable.py  function_lambda.py  function_modifying_global.py  function_nested.py  function_print_before_call.py  function_shadowing_global.py  function_with_recursion.py  importing.py  input.py  instrumented.py  list_comprehension.py  loop_with_mutation_and_print.py  one_line_for_loop.py  one_line_three_statements.py  print.py  procedure.py  reverse.py  single_assignment.py  syntax_error.py  uncaught_exception.py  while_loop.py
