[project]
name = "atrace"
version = "0.1.9"
description = "Generate trace tables for simple programs"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [{ name = "Nicholas Wolff", email = "nwolff@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["tabulate>=0.9.0"]

[project.urls]
Repository = "https://github.com/nwolff/atrace.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "icecream>=2.1.10",
    "mypy>=1.19.1",
    "ruff>=0.14.14",
    "types-tabulate>=0.9.0.20241207",
]
