[project]
name = "atrace"
description = "Generate trace tables for simple programs"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
dynamic = ["version"]
authors = [{ name = "Nicholas Wolff", email = "nwolff@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Software Development :: Debuggers",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = ["tabulate>=0.9.0"]

[project.urls]
Homepage = "https://github.com/nwolff/atrace.git"

[dependency-groups]
dev = [
    "babel>=2.18.0",
    "coverage>=7.13.4",
    "mypy>=1.19.1",
    "ruff>=0.14.14",
    "types-mock>=5.2.0.20250924",
    "types-tabulate>=0.9.0.20241207",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/atrace/_version.py"

[tool.coverage.run]
core = "sysmon"
